--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,13 @@
 .pr {
   float: right;
 }
+
+.mr5 {
+  margin-right: 5px;
+}
+
+.author-form {
+  margin-bottom: 25px;
+  padding-bottom: 20px;
+  border-bottom: thin solid rgb(202, 199, 199);
+}
